src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_special_hermite_polynomial_h_out(value out, value x, value n);
value atg_special_hermite_polynomial_h_x_scalar(value x, value n);
value atg_special_hermite_polynomial_h_x_scalar_out(value out, value x, value n);
value atg_special_hermite_polynomial_he(value x, value n);
value atg_special_hermite_polynomial_he_n_scalar(value x, value n);
value atg_special_hermite_polynomial_he_n_scalar_out(value out, value x, value n);
value atg_special_hermite_polynomial_he_out(value out, value x, value n);
value atg_special_hermite_polynomial_he_x_scalar(value x, value n);
value atg_special_hermite_polynomial_he_x_scalar_out(value out, value x, value n);
value atg_special_i0(value self);
value atg_special_i0_out(value out, value self);
value atg_special_i0e(value self);
value atg_special_i0e_out(value out, value self);
value atg_special_i1(value self);
value atg_special_i1_out(value out, value self);
value atg_special_i1e(value self);
value atg_special_i1e_out(value out, value self);
value atg_special_laguerre_polynomial_l(value x, value n);
value atg_special_laguerre_polynomial_l_n_scalar(value x, value n);
value atg_special_laguerre_polynomial_l_n_scalar_out(value out, value x, value n);
value atg_special_laguerre_polynomial_l_out(value out, value x, value n);
value atg_special_laguerre_polynomial_l_x_scalar(value x, value n);
value atg_special_laguerre_polynomial_l_x_scalar_out(value out, value x, value n);
value atg_special_legendre_polynomial_p(value x, value n);
value atg_special_legendre_polynomial_p_n_scalar(value x, value n);
value atg_special_legendre_polynomial_p_n_scalar_out(value out, value x, value n);
value atg_special_legendre_polynomial_p_out(value out, value x, value n);
value atg_special_legendre_polynomial_p_x_scalar(value x, value n);
value atg_special_legendre_polynomial_p_x_scalar_out(value out, value x, value n);
value atg_special_log1p(value self);
value atg_special_log1p_out(value out, value self);
value atg_special_log_ndtr(value self);
value atg_special_log_ndtr_out(value out, value self);
value atg_special_log_softmax(value self, int64_t dim, int dtype);
value atg_special_logit(value self, value eps);
value atg_special_logit_out(value out, value self, value eps);
value atg_special_logsumexp(value self, value dim, int keepdim);
value atg_special_logsumexp_out(value out, value self, value dim, int keepdim);
value atg_special_modified_bessel_i0(value self);
value atg_special_modified_bessel_i0_out(value out, value self);
value atg_special_modified_bessel_i1(value self);