src/bindings/torch_bindings_generated6.ml


  let stubs_special_hermite_polynomial_h_out =
    foreign
      "atg_special_hermite_polynomial_h_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_hermite_polynomial_h_x_scalar =
    foreign
      "atg_special_hermite_polynomial_h_x_scalar"
      (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_hermite_polynomial_h_x_scalar_out =
    foreign
      "atg_special_hermite_polynomial_h_x_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_hermite_polynomial_he =
    foreign
      "atg_special_hermite_polynomial_he"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_hermite_polynomial_he_n_scalar =
    foreign
      "atg_special_hermite_polynomial_he_n_scalar"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_hermite_polynomial_he_n_scalar_out =
    foreign
      "atg_special_hermite_polynomial_he_n_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_hermite_polynomial_he_out =
    foreign
      "atg_special_hermite_polynomial_he_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_hermite_polynomial_he_x_scalar =
    foreign
      "atg_special_hermite_polynomial_he_x_scalar"
      (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_hermite_polynomial_he_x_scalar_out =
    foreign
      "atg_special_hermite_polynomial_he_x_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_i0 = foreign "atg_special_i0" (gc_tensor @-> returning raw_tensor)

  let stubs_special_i0_out =
    foreign "atg_special_i0_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_i0e = foreign "atg_special_i0e" (gc_tensor @-> returning raw_tensor)

  let stubs_special_i0e_out =
    foreign "atg_special_i0e_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;
end

module C3 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_special_i1 = foreign "atg_special_i1" (gc_tensor @-> returning raw_tensor)

  let stubs_special_i1_out =
    foreign "atg_special_i1_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_i1e = foreign "atg_special_i1e" (gc_tensor @-> returning raw_tensor)

  let stubs_special_i1e_out =
    foreign "atg_special_i1e_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_laguerre_polynomial_l =
    foreign
      "atg_special_laguerre_polynomial_l"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_laguerre_polynomial_l_n_scalar =
    foreign
      "atg_special_laguerre_polynomial_l_n_scalar"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_laguerre_polynomial_l_n_scalar_out =
    foreign
      "atg_special_laguerre_polynomial_l_n_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_laguerre_polynomial_l_out =
    foreign
      "atg_special_laguerre_polynomial_l_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_laguerre_polynomial_l_x_scalar =
    foreign
      "atg_special_laguerre_polynomial_l_x_scalar"
      (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_laguerre_polynomial_l_x_scalar_out =
    foreign
      "atg_special_laguerre_polynomial_l_x_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_legendre_polynomial_p =
    foreign
      "atg_special_legendre_polynomial_p"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_legendre_polynomial_p_n_scalar =
    foreign
      "atg_special_legendre_polynomial_p_n_scalar"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_legendre_polynomial_p_n_scalar_out =
    foreign
      "atg_special_legendre_polynomial_p_n_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_legendre_polynomial_p_out =
    foreign
      "atg_special_legendre_polynomial_p_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_legendre_polynomial_p_x_scalar =
    foreign
      "atg_special_legendre_polynomial_p_x_scalar"
      (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_legendre_polynomial_p_x_scalar_out =
    foreign
      "atg_special_legendre_polynomial_p_x_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_log1p =
    foreign "atg_special_log1p" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_log1p_out =
    foreign "atg_special_log1p_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_log_ndtr =
    foreign "atg_special_log_ndtr" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_log_ndtr_out =
    foreign "atg_special_log_ndtr_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_log_softmax =
    foreign
      "atg_special_log_softmax"
      (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_special_logit =
    foreign "atg_special_logit" (gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_special_logit_out =
    foreign
      "atg_special_logit_out"
      (gc_tensor @-> gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_special_logsumexp =
    foreign
      "atg_special_logsumexp"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_special_logsumexp_out =
    foreign
      "atg_special_logsumexp_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_special_modified_bessel_i0 =
    foreign "atg_special_modified_bessel_i0" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_modified_bessel_i0_out =
    foreign
      "atg_special_modified_bessel_i0_out"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_modified_bessel_i1 =
    foreign "atg_special_modified_bessel_i1" (gc_tensor @-> returning raw_tensor)
  ;;
end

module C (F : Cstubs.FOREIGN) = struct
  include C0 (F)
  include C1 (F)
  include C2 (F)
  include C3 (F)
end
